# musify

./: .env  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
app/: factory.py  helpers.py
app/albums/: routes.py  schemas.py
app/artists/: routes.py  schemas.py
app/genres/: helpers.py  routes.py  schemas.py
app/musics/: routes.py  schemas.py
database/: connection.py  initialize.py  models.py
tests/: test_endpoints.py
