[tool.poetry]
name = "musify"
version = "0.1.0"
description = ""
authors = ["pedrobrazil <pedro.brazil@apura.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.1"}
asyncpg = "^0.27.0"
orjson = "^3.8.5"
pytest = "^7.2.1"
httpx = "^0.23.3"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
